<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_interface</name>
  <version>0.0.1</version>
  <description>Interface to control a robot in ROS2 using camera input</description>
  <maintainer email="leonlago@gmail.com">ros-student</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
<depend>turtlesim</depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
